web-infras/parser/tests/fixtures/babel/es2022/class-private-names-duplicated/static-method-static-get/output.txt
[SyntaxError]: Duplicate private name. (3,14)
3|  static get #x() {}
 |            ^
